Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: maybe implement a default message channel, very much like Erlang's
      actor model (which is cool in a lot of important aspects (failures!),
      but very lacking in others (higher level ipc)).

5.0
	- NEW ARCHITECTURE: use 4.912 for the stable version.
        - directly patch the entersub opcode calling ssl functions (cede,
          transfer and so on). this does speed up context switching by
          up to 10%. More importanly, it frees us from the hardcoded
          behaviour of entersub, so we might actually be able to return
          something from those functions.
        - take advanatge of __builtin_frame_address on gcc.

4.912 Thu Nov 13 18:31:23 CET 2008
	- minor cleanups.
        - use much larger stacks on linux and perl < 5.8.8.
        - Coro::Debug::new_unix_server did not unlink the socket
          when destroyed.

4.911 Tue Nov 11 04:26:17 CET 2008
	- "port" to threaded perls.

4.91 Mon Nov 10 05:36:38 CET 2008
        - the ->throw exception object no longer leaks.
        - creating a new cctx leaked a scopestack entry (memleak).
	- new coroutines didn't get created with a zero flags field
          (unknown impact).
	- calling ->throw on a not-yet-started coroutine should now work
          instead of being ignored.
        - ->throw is now supported on Coro::State objects.
        - clean up cctx creation code a bit.
        - entersub is actually a UNOP, not a LOGOP (not a bugfix).

4.9  Sat Nov  8 17:45:27 CET 2008
 	- (libcoro) did not preserve rbp with CORO_ASM (we are getting there).
        - (libcoro) no longer leak threads in the experimental pthread backend,
          also speed it up considerably.
        - (libcoro) do not rely on makecontext passing void *'s unscathed.
        - fix compiletime dependencies on libcoro in the Makefile.
        - cctx_count wasn't always updated properly.